syntax="proto3";

package new_object_builder_service;
option go_package="genproto/new_object_builder_service";

import "google/protobuf/empty.proto";
import "google/protobuf/struct.proto";

service DocxTemplateService {
  rpc Create(CreateDocxTemplateRequest) returns (DocxTemplate) {}
  rpc GetByID(DocxTemplatePrimaryKey) returns (DocxTemplate) {}
  rpc GetAll(GetAllDocxTemplateRequest) returns (GetAllDocxTemplateResponse) {}
  rpc Update(DocxTemplate) returns (DocxTemplate) {}
  rpc Delete(DocxTemplatePrimaryKey) returns (google.protobuf.Empty) {}
}

// Docx Template
message CreateDocxTemplateRequest {
  string project_id = 1;
  string title = 2;
  string table_slug = 3;
  string file_url = 4;
  string resource_id = 5;
  string pdf_url = 6;
}

message DocxTemplate {
  string id = 1;
  string project_id = 2;
  string title = 3;
  string table_slug = 4;
  string file_url = 5;
  string resource_id = 6;
  string pdf_url = 7;
}

message GetAllDocxTemplateResponse {
  repeated DocxTemplate docx_templates = 1;
  int32 count = 2;
}

message DocxTemplatePrimaryKey {
  string id = 1;
  string project_id = 2;
  string user_id = 3;
  string env_id = 4;
  string resource_id = 5;
}

message GetAllDocxTemplateRequest {
  int32 offset = 1;
  int32 limit = 2;
  string search = 3;
  string project_id = 4;
  string table_slug = 5;
  string resource_id = 6;
}
